16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added MiniReaderElectron class
	* Added MiniReaderMuon class
	* Added MiniReaderMissingET class

16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Manage to read TTree

16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added support to read MiniTree
	* Added functions to plot histograms

14-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Added classes to read jets

13-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
	* Creation of the package
	* Tagging MiniReader-00-00-01