@@ -14,12 +14,12 @@ MiniReaderMissingET::MiniReaderMissingET()
 
 void MiniReaderMissingET::ReadMissingETBranches(TTree *tree)
 {
-  tree->SetBranchAddress("m_EtMiss", &m_EtMiss);
-  tree->SetBranchAddress("m_EtMissPhi", &m_EtMissPhi);
-  tree->SetBranchAddress("m_WEtMiss", &m_WEtMiss);
-  tree->SetBranchAddress("m_WEtMissPhi", &m_WEtMissPhi);
-  tree->SetBranchAddress("m_ZEtMiss", &m_ZEtMiss);
-  tree->SetBranchAddress("m_ZEtMissPhi", &m_ZEtMissPhi);
-  tree->SetBranchAddress("m_EtMissMuVeto", &m_EtMissMuVeto);
-  tree->SetBranchAddress("m_EtMissMuVetoPhi", &m_EtMissMuVetoPhi);
+  tree->SetBranchAddress("EtMiss", &m_EtMiss);
+  tree->SetBranchAddress("EtMissPhi", &m_EtMissPhi);
+  tree->SetBranchAddress("WEtMiss", &m_WEtMiss);
+  tree->SetBranchAddress("WEtMissPhi", &m_WEtMissPhi);
+  tree->SetBranchAddress("ZEtMiss", &m_ZEtMiss);
+  tree->SetBranchAddress("ZEtMissPhi", &m_ZEtMissPhi);
+  tree->SetBranchAddress("EtMissMuVeto", &m_EtMissMuVeto);
+  tree->SetBranchAddress("EtMissMuVetoPhi", &m_EtMissMuVetoPhi);
 }
