@@ -2,6 +2,7 @@
 	* Added MiniReaderElectron class
 	* Added MiniReaderMuon class
 	* Added MiniReaderMissingET class
+	* Added MiniReaderEventInfo class
 
 16-03-2015 Gabriele Bertoli <gbertoli@cern.ch>
 	* Manage to read TTree
